feat: add validation to user login/register

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "dev:alternative": "nodemon -L ./src/index.ts && tsc -w",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
-    "generate:migration": "npx ts-node ./node_modules/.bin/typeorm migration:generate -d ./src/index",
+    "generate:migration": "ts-node ./node_modules/.bin/typeorm migration:generate -d ./src/index",
+    "generate:migration2": "typeorm migration:generate -d ./src/index.ts",
     "start": "node dist/index.js",
     "build": "npx tsc",
     "typeorm": "typeorm-ts-node-commonjs",
@@ -30,6 +31,8 @@
     "@apollo/server": "^4.9.3",
     "argon2": "^0.31.1",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
