--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.8",
     "@types/node": "^20.6.0",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
@@ -33,11 +34,14 @@
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql": "^16.8.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
   }
