--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.8",
     "@types/node": "^20.6.0",
+    "@types/nodemailer": "^6.4.14",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -40,6 +41,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "^16.8.1",
+    "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
