--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.8",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20.6.0",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.8",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -41,10 +43,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "^16.8.1",
+    "ioredis": "^5.3.2",
     "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
-    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   }
 }
